--- a/style.css
+++ b/style.css
@@ -107,6 +107,112 @@ button {
 
 
 }
+.information {
+ 
+}
+.random-info {
+    display: flex;
+    flex-direction: column;
+    background: var(--cor1);
+    padding: 40px;
+}
+.info-head {
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+    font-weight: 900;
+    color: var(--cor0);
+    padding: 40px;
+    padding-top: 10px;
+
+}
+
+.the-box {
+    display: flex;
+    margin: auto;
+    width: 500px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+   
+   
+}
+.box-one {
+   width: 100px;
+    height: 100px;
+    border: var(--cor2) solid 2px;
+    border-radius: 10px;
+}
+.one{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.box-two {
+    width: 100px;
+    height: 100px;
+    border: var(--cor2) solid 2px;
+    border-radius: 10px;
+}
+.two {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.box-three {
+    width: 100px;
+    height: 100px;
+    border: var(--cor2) solid 2px;
+    border-radius: 10px;
+}
+.three {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.box-four {
+    width: 100px;
+    height: 100px;
+    border: var(--cor2) solid 2px;
+    border-radius: 10px;
+}
+.four {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.quote {
+    display: flex;
+    background: var(--cor3);
+
+}
+.quote-body {
+    display: flex;
+    flex-direction: column;
+    padding: 100px;
+    justify-content: center;
+    align-items: center;
+}
+.quote-text {
+ display: flex;
+ margin: auto;
+ width: 766px;
+ font-size: 36px;
+ font-weight: lighter;
+ font-style: italic;
+ flex-wrap: nowrap;
+}
+.quote-owner {
+    display: flex;
+    font-weight: bold;
+    font-size: 25px;
+    align-self: flex-end;
+
+}
 footer{
     display: flex;
     background-color: var(--cor0);
